--- a/base/footer.html
+++ b/base/footer.html
@@ -1,5 +1,7 @@
+</body>
 	<footer class="footer">
     	<div class="container">
     		<center><p class="text-muted">2015 © Blaine Harper</p></center>
     	</div>
     </footer>
+    </html>
